bin/tests/parser/harness/first_tokens.swg
#global fileprivate
// swc-option syntax-only

} // swc-expected-error {{parser_err_unexpected_token}}
{ // swc-expected-error {{parser_err_expected_closing}}
;
